openshift/specs/adjutant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adjutant
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: adjutant
spec:
  ports:
  - name: 443-https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: adjutant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adjutant
  labels:
    app: adjutant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adjutant
  template:
    metadata:
      labels:
        app: adjutant
    spec:
      containers:
      - name: adjutant
        image: docker.io/massopencloud/adjutant-moc:r2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: adjutant
  name: adjutant
spec:
  host: adjutant.massopen.cloud
  port:
    targetPort: 443-https
  tls:
    termination: edge
  to:
    kind: Service
    name: adjutant
